# NeuroAI-Project13

./: .gitignore  README.md  data_gen.py  development_note.md  environment.yml  pyproject.toml  recreateRNN.ipynb  requirements.txt  technical_note.md
data/pdm/: config.npz
data_generation/PDM/: README_data.md
dyn_rnn/: main.py
dynrnn/: RNN_Lorenz.pt  y_Lorenz.pt  y_VanDerPol.pt
elman_vs_ctrnn_comparison/: 04_minimal_product.ipynb  architecture_comparison.ipynb
elman_vs_ctrnn_comparison/metrics/: elman_vs_ctrnn_training_metrics.json
elman_vs_ctrnn_comparison/model_weights/: CTRNN_ContextDecisionMaking-v0_h80.pt  CTRNN_PerceptualDecisionMaking-v0_h80.pt  Elman_PerceptualDecisionMaking-v0_h20.pt  Elman_PerceptualDecisionMaking-v0_h80.pt  ctrnn_context_best_h100.pth  ctrnn_perceptual_best_h100.pth  elman_context_best_h100.pth  elman_perceptual_best_h100.pth
example_rnn/dyn_rnn/: main.py
example_rnn/true_rnn/: main.py
figures/: stats_summary.csv
notebooks/: 01_neurogym_datasets.ipynb  01_poc_training.ipynb  02_poc_analysis.ipynb  03_PID_analysis_pipeline.ipynb  03_neurogym_tour.ipynb  04_PID_bipartitions.ipynb  04_minimal_product.ipynb  05_Full_CTRNN_train_pipeline.ipynb  05_Full_train_pipeline.ipynb  05_ctrnn_pid_both_tasks.ipynb  06_Full_PID_analysis_pipeline.ipynb  explore_neurogym_data.ipynb  poc_hidden_states.npy  recreateRNN.ipynb
results/pid_outputs/: stats_summary.csv
roadmap_generator/: SETUP_INSTRUCTIONS.md  setup_roadmap.py
size_comparison/: README.md  check_dataset.ipynb  comparison.ipynb
true_rnn/: RNN_VanDerPol.pt  main.py  trueRNN.py
(+183 files in other folders)
