[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroai-project13"
version = "0.2.0"
description = "Information Decomposition in Task-Trained RNNs"
requires-python = ">=3.11"
dependencies = [
    "torch==2.3.1",
    "numpy==1.26.4",
    "scipy==1.13.1",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "neurogym==1.0.8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]